--- a/todo.txt
+++ b/todo.txt
@@ -8,7 +8,6 @@ Fiksen
 Niet testen
 - Fiks formatting ranges in settings
 
-
 - Config formulier voor beheerders
 - Config formulier voor pediatrie continue medicamenten
 - Logging configuratie wijzigingen door apotheek
@@ -92,4 +91,6 @@ Planning formulier:
 - Check op max knopnaam lengte van 60 tekens bij aanmaken nieuwe knopnaam
 
 NB PLANNEN FORMULIER LOOPT VAST INDIEN GEEN AFSPRAKEN!!
+
+Continue medicatie per kg vink om voor b.v. midazolam bij volwassen postuur in mg/uur te kunnen voorschrijven.
 
